Mobile grid spacing fix

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -139,7 +139,7 @@
         width: 100%
 
         @media screen and (max-width: $break-medium)
-          margin-bottom: 20px
+          margin-bottom: 10px
 
       .product-info
         +transform(translateZ(0))
